# cognitiveos-vault

./: .gitattributes  .gitignore  AGENTS.md  README.md  orca.yaml  pyproject.toml
.codex/: config.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml
System/docs/: canonical-root-control-plane-v0.8.md  codex-client-setup-v0.1.md  cognitiveos-architecture-v0.1.md  context-pack-quality-v0.1.md  decision-log.md  device-handoff-intel-mac-v0.1.md  embeddings-design-v0.3.md  git-versioning-policy.md  model-evaluation-v0.3.md  note-contract-v0.2.md  orca-worktree-operating-plan.md  phase-a-consumer-parity.md  production-boundary-verifier-v0.8.md  qualified-linux-control-plane-evidence-v0.8.md  qualified-linux-evidence-ci-gate-v0.1.md  release-notes-v0.1.0.md  release-notes-v0.2.0.md  release-notes-v0.3.0.md  release-notes-v0.4.0.md  release-notes-v0.5.0.md  release-v0.1.md  release-v0.3.md  release-v0.4.md  release-v0.5.md  retrieval-evaluation-fixtures-v0.7.md  roadmap-v0.1.md  roadmap-v0.5.md  schema-index-v0.1.md  schema-mcp-v0.1.md  schema-note-v0.1.md  templates-v0.1.md  templates-v0.2.md  writeback-permissions-v0.1.md  writeback-proposal-schema-v0.8.md  writeback-threat-model-v0.8.md
System/evaluation/: multilingual-retrieval-v0.3.json  retrieval-quality-v0.7.json
System/templates/v0.1/: concept.md  entity.md  inbox.md  journal.md  map.md  output.md  project.md  source.md  system.md
System/templates/v0.2/: concept.md  entity.md  inbox.md  journal.md  map.md  output.md  project.md  source.md  (+1 more)
scripts/: bootstrap-macos.sh  run-cognitiveos-mcp.ps1  run-cognitiveos-mcp.sh  run-orca-codex.sh  run-qualified-linux-evidence.sh  setup-orca-worktree.sh  verify-github-agent-auth.sh  verify_environment.py  verify_release.py
src/cognitiveos/: __init__.py  approval.py  atomic_apply.py  cli.py  context_quality.py  control_plane.py  embedding_chunks.py  embedding_index.py  embeddings.py  evaluation.py  indexer.py  manifest.py  mcp_server.py  models.py  parser.py  production_boundary.py  retrieval.py  runtime.py  safety.py  scanner.py  sentence_transformers_adapter.py  status.py  validation.py  writeback_proposal.py
tests/: control_plane_support.py  fixture_only_topology.py  qualified_linux_control_plane_support.py  test_approval.py  test_atomic_apply.py  test_cognitiveos_core.py  test_control_plane.py  test_fixture_only_topology.py  test_github_agent_auth_preflight.py  test_production_boundary_verifier.py  test_qualified_linux_control_plane.py  test_qualified_linux_evidence_gate.py  test_release_gates.py  test_writeback_proposal.py  writeback_support.py
(+12 files in other folders)
