[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cognitiveos"
version = "0.5.0"
description = "Read-only Obsidian PKM indexer and MCP interface"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8.0"]
local-embeddings = [
  "sentence-transformers>=3.4,<4; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "numpy<2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "sentence-transformers>=5.0,<6; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]

[project.scripts]
cognitiveos-index = "cognitiveos.cli:main_index"
cognitiveos-search = "cognitiveos.cli:main_search"
cognitiveos-mcp = "cognitiveos.mcp_server:main"
cognitiveos-embed = "cognitiveos.cli:main_embed"
cognitiveos-evaluate-embeddings = "cognitiveos.evaluation:main_evaluate"
cognitiveos-validate = "cognitiveos.cli:main_validate"
cognitiveos-status = "cognitiveos.cli:main_status"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build]
exclude = [
  "/.pkm-index",
  "/.venv*",
  "/dist",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cognitiveos"]
